--- a/Content/dx.light.css
+++ b/Content/dx.light.css
@@ -1,6 +1,6 @@
 /**
 * DevExtreme (dx.light.css)
-* Version: 20.1.6
+* Version: 20.1.6`
 * Build date: Fri Jul 17 2020
 *
 * Copyright (c) 2012 - 2020 Developer Express Inc. ALL RIGHTS RESERVED
