--- a/Content/dalim.css
+++ b/Content/dalim.css
@@ -46,13 +46,23 @@ background: rgba(0,0,0,0.1);color: #000;}
 .info-box-number {  font-size: 24px; }
 .info-box-content {  padding: 5px 10px; margin-left: 90px;}
 
+/* 로그인 화면 */
+.login-box {margin-top:0;}
+.login-logo {padding-top:40px;}
+.login-logo .dalim_logo {display:block; background: url("./images/logo.png") 50% 0 no-repeat; width:100%;height:30px;}
+.login-logo .logo_text {display:block;font-size:14px; color:#5096cd;}
+.login-box-bg {background: url("./images/bg/GettyImages-1145892681.jpg") 0 0 no-repeat;
+background-position: center center;	background-size: cover;display:flex; align-items: center; }
+.login-box-bg {background: #5096cd;display:flex; align-items: center; }
+.login-box-frame {background:#fff;height:420px;box-shadow:3px 3px 5px black;}
+.login-box-body {background: #fff;}
+.btn-login {background:#5096cd; }
+.btn-login:hover {background:#2c6b9d; }
+
 /* 사이즈 간격 조정 */
-
-
 @media (max-width: 991px) {
 .content-header > .breadcrumb { background: #5096cd;}
 }
 
 @media (min-width: 768px) {
-
 }
