--- a/Content/dalim_20201005.css
+++ b/Content/dalim_20201005.css
@@ -46,16 +46,9 @@ background: rgba(0,0,0,0.1); color: #000;}
 
 /* 컨텐츠 탭 */
 .content-tabs { border-bottom: solid 1px #ddd; line-height:40px;}
-
-/* 컨텐츠 헤더 */
-/* .content-header {display:flex; padding-top:0; } */
-/* .content-header h1 {display:inline-block; flex:none; display: flex; align-items: center;} */
-.content-header h1 small {font-size:12px; }
-/* .content-header > .breadcrumb { background: none; margin-top:5px; position: relative; top:0; right:0;  float:none; text-align: right; margin-left:auto;} */
-@media (max-width: 768px) {
-/* .content-header {display:block; padding-top:15px;} */
+.content-header > .breadcrumb { background: #5096cd; margin-top:5px; position: relative; top:0; right:0;  float:none; text-align: right;
+ box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
-
 
 /* left 내비게이션 */
 .skin-blue .wrapper, .skin-blue .main-sidebar, .skin-blue .left-side { background-color: #fff;}
